--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^9.4.4",
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "^5.14.1",
+    "htmx.org": "^2.0.7",
+    "pino": "^9.12.0",
+    "pino-pretty": "^13.1.1",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2"
   }
 }
