--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ pnpm-debug.log*
 
 # environment variables
 .env
-.env.production
+.env.*
 
 # macOS-specific files
 .DS_Store
@@ -23,3 +23,7 @@ pnpm-debug.log*
 # Editors/IDEs
 .vscode
 .idea
+
+/public/leaflet-elevation/
+/scripts/runDocker.sh
+/public/images/
