--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.6.9",
     "@astrojs/node": "^9.4.4",
     "@astrojs/preact": "^4.1.1",
     "@raruto/leaflet-elevation": "^2.5.1",
