--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,21 @@
-steps:
-  # Build the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest', '.' ]
-  # Push the image to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest' ]
-  # Deploy image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args: [ 'run', 'deploy', 'minimum-web', '--image', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest', '--region', 'europe-west1' ]
-images:
-  - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest'
+  steps:
+    # Build the image
+    - name: 'gcr.io/cloud-builders/docker'
+      args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA', '.' ]
+    # Push the image to Artifact Registry
+    - name: 'gcr.io/cloud-builders/docker'
+      args: [ 'push', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA' ]
+    # Deploy image to Cloud Run
+    - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+      entrypoint: gcloud
+      args:
+        - 'run'
+        - 'deploy'
+        - 'latest'
+        - '--image'
+        - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA'
+        - '--region'
+        - 'europe-west1'
+  images:
+    - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA'
+
