--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,21 +4,21 @@ options:
 steps:
   # Build the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web:$COMMIT_SHA', '.' ]
+    args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA', '.' ]
   # Push the image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web:$COMMIT_SHA' ]
+    args: [ 'push', 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA' ]
   # Deploy image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       - 'run'
       - 'deploy'
-      - 'latest'
+      - 'minimum-web'
       - '--image'
-      - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web:$COMMIT_SHA'
+      - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA'
       - '--region'
       - 'europe-west1'
 images:
-  - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web:$COMMIT_SHA'
+  - 'europe-west1-docker.pkg.dev/mythic-evening-474009-a8/minimum-web/latest:$COMMIT_SHA'
 
